more CI
Signed-off-by: Mark Gunlogson <mark@gunlogson.com>