@@ -25,15 +25,7 @@
 							<target>1.8</target>
 						</configuration>
 					</plugin>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-surefire-plugin</artifactId>
-						<version>2.19.1</version>
-						<configuration>
-							<!-- Custom config for Travis CI...needs more memory than defaults -->
-							<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
-						</configuration>
-					</plugin>
+
 					<plugin>
 						<groupId>org.jacoco</groupId>
 						<artifactId>jacoco-maven-plugin</artifactId>
